fix phone overflow

--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ h6 {
 
 .intro-container {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     width: 100%;
